--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "node": true
   },
   "rules": {
+    "no-return-await": 0,
+    "implicit-arrow-linebreak": 0,
     "no-console": 0,
     "no-underscore-dangle": 0,
     "consistent-return": 0,
