--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "node": true
   },
   "rules": {
+    "operator-linebreak": 0,
+    "object-curly-newline": 0,
     "no-plusplus": 0,
     "no-return-await": 0,
     "implicit-arrow-linebreak": 0,
