--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "delibhai-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
     "server": "nodemon ./src/index.js"
