--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "delibhai-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "server": "nodemon ./src/index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
