--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "http-status": "^1.7.4",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.4.0",
-        "zod": "^3.23.8",
-        "validator": "^13.11.0"
+        "validator": "^13.11.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@eslint/js": "^9.3.0",
@@ -32,6 +32,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/validator": "^13.12.2",
         "eslint": "^9.3.0",
         "prettier": "^3.2.5",
         "ts-node-dev": "^2.0.0",
