--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "scripts": {
         "start": "node dist/server.js",
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "build": "tsc",
+        "ts.check": "tsc --project tsconfig.json",
+        "build": "rimraf dist && tsc",
+        "add-build": "git add dist",
+        "commit-build": "git commit -m 'build'",
         "lint": "npx eslint src --ignore-pattern .ts",
         "lint:fix": "npx eslint src --fix",
         "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
         "prettier:fix": "npx prettier --write src"
     },
+    "pre-push": [
+        "ts.check",
+        "build",
+        "add-build",
+        "commit-build"
+    ],
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.1",
@@ -34,7 +43,9 @@
         "@types/jsonwebtoken": "^9.0.6",
         "@types/validator": "^13.12.2",
         "eslint": "^9.3.0",
+        "pre-push": "^0.1.4",
         "prettier": "^3.2.5",
+        "rimraf": "^6.0.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.10.0"
