--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "http-status": "^1.7.4",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.4.0",
+        "socket.io": "^4.8.1",
         "validator": "^13.11.0",
         "zod": "^3.23.8"
     },
